<resources>
    <string name="app_name">No BS QR Code Scanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">No BS QR Code Scanner</string>
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Scanner</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="about_text">App developed by Sam Lavin.</string>
    <string name="my_website">My Website</string>
    <string name="project_repository">Project Repository</string>
    <string name="paypal">PayPal</string>
    <string name="support_me">Support me (if you want):</string>
    <string name="google_pay">Google Pay</string>
    <string name="automatically_execute_intents">Automatically execute intents</string>
    <string name="append_error_messages_to_qr_code_strings">Append error messages to QR Code strings</string>
</resources>